# serializer version: 1
# name: test_contributing_features[docs]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [MIT License](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_features[no_docs]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [MIT License](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  ## Development documentation
  
  ### Prerequisites
  
  - [x] [**git** for version control][git]
  - [x] [**mise**][mise] tool manager: `curl https://mise.run | sh` or
    [alternate installation method][mise-installation]
  
      !!! info
  
          `mise` ensures additional software is available, such as:
  
          * A [supported version][python-versions] of [**Python**][python]
          * [Astral's **uv** Python project manager][uv]
  
  [git]: https://git-scm.com
  [mise-installation]: https://mise.jdx.dev/installing-mise.html
  [mise]: https://mise.jdx.dev
  [python-versions]: https://devguide.python.org/versions/
  [python]: https://python.org
  [uv]: https://docs.astral.sh/uv/
  
  ### Project development workflow
  
  #### Cloning the repository
  
  ```sh
  git clone https://github.com/ness/PKFire
  cd PKFire
  ```
  
  Run `mise install` in new repository clones to install tools, dependencies, and
  git hooks:
  
  ```sh
  mise install
  ```
  
  #### Development tools
  
  * `mise run lint`: Run formatters and static checks
  * `mise run test`: Run tests
  
  The `lint` and `test` tasks can also be run as a single combined command with:
  
  ```sh
  mise run lt
  ```
  
  ### Test snapshots
  
  Some tests compare test results with saved snapshots. Test snapshots can be
  updated by running:
  
  ```sh
  mise run snapup
  ```
  
  ### Applying copier-python template updates
  
  Copier can update your project with template changes that have occurred since
  the project was created.
  
  To apply updates, simply run in your project directory:
  
  ```sh
  copier update
  ```
  
  This will repeat the setup prompts, in case any prompts have been added or
  changed.
  
  !!! tip
      To change template-provided features in your project, simply change your
      answers in the update prompts.
  
  To apply updates without being prompted (reusing all previous answers), run:
  
  ```sh
  copier update -l
  ```
  
  When [`copier update`][copier-update] is finished, view changes with
  `git status` and `git diff`. Resolve any conflicts, and then commit the result.
  
  [copier-update]: https://copier.readthedocs.io/en/stable/updating/
  
  '''
# ---
# name: test_contributing_license[AGPL-3.0-only]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [GNU Affero General Public License v3.0 only](https://github.com/ness/PKFire/blob/main/COPYING),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[AGPL-3.0-or-later]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [GNU Affero General Public License v3.0 or later](https://github.com/ness/PKFire/blob/main/COPYING),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[Apache-2.0]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [Apache License 2.0](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[BSD-3-Clause]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [BSD 3-Clause "New" or "Revised" License](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[CC-BY-4.0]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [Creative Commons Attribution 4.0 International](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[CC-BY-SA-4.0]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [Creative Commons Attribution Share Alike 4.0 International](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[CC0-1.0]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  dedicated to the public domain under
  [Creative Commons Zero v1.0 Universal](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to do so.
  
  '''
# ---
# name: test_contributing_license[GPL-3.0-only]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [GNU General Public License v3.0 only](https://github.com/ness/PKFire/blob/main/COPYING),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[GPL-3.0-or-later]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [GNU General Public License v3.0 or later](https://github.com/ness/PKFire/blob/main/COPYING),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[ISC]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [ISC License](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[LGPL-3.0-only]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [GNU Lesser General Public License v3.0 only](https://github.com/ness/PKFire/blob/main/COPYING.LESSER),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[LGPL-3.0-or-later]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [GNU Lesser General Public License v3.0 or later](https://github.com/ness/PKFire/blob/main/COPYING.LESSER),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
# name: test_contributing_license[MIT]
  '''
  # Contributing to PKFire
  
  **Contributions are welcome!**
  
  Thank you for your time and interest in improving
  **PKFire**!
  
  ## Project resources
  
  * **Web site**: **<https://ness.github.io/PKFire>**
    for general project information, usage, and development documentation
  * **Repository**: <https://github.com/ness/PKFire>
    for submitting pull requests
  * **Issue tracker**: <https://github.com/ness/PKFire/issues>
    for questions or bug reports
  
  ## Contribution terms
  
  By submitting a contribution to PKFire, you agree that it is
  licensed under the project's license, the
  [MIT License](https://github.com/ness/PKFire/blob/main/LICENSE),
  with no additional terms,
  and that you have the right to submit it under that license.
  
  '''
# ---
